<resources>
    <string name="app_name">Board Game Tracker</string>

    <!--Register Fields-->
    <string name="title_register">Register</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Sign Up Right Here!</string>
    <string name="btn_go_to_login">Already Signed In? Go to Login</string>

    <!-- Login Screen Strings -->
    <string name="title_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_go_to_register">Don\'t have an account? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>